push all the challenge sections

--- a/miranda2.html
+++ b/miranda2.html
@@ -77,8 +77,11 @@
                 <span class=caption>Role</span>
                 <p class="description1">CUI Design and Modeling, Script Development</p>
               </div>
-              <br></br>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
               <div class="col-md-8">
+                <p class="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">This project was part of my Beginner Interaction Design Studio. Teams were given the ability to select a domain from a shortlist.</p>
               </div>
@@ -97,7 +100,7 @@
             <!--section 2-->
              <div class="row mb-5">
               <div class="col-md-6">
-                <p id="rowoverview2">02 Solution</p>
+                <p id="rowoverview2">03 Solution</p>
                   <p class="description1">
                     The convenience of <b>online shopping has stagnated the number of in-store shoppers</b>.<br></br>Our goal was two-fold:<br><b>01</b> to get more shoppers in stores<br>
                   <b>02</b> to make the shopping experience more enjoyable</p>
@@ -137,7 +140,7 @@
               </div>
               <div class="col-md-6">
                 <br></br><br>
-                <p id="rowoverview2">03 Approach</p>
+                <p id="rowoverview2">04 Approach</p>
                 <p id="subheader"><b>voice based competitor analysis</b></p>
                 <p class="description1">Prior to building a CUI, our team took a deep dive into the <b>current market</b> and features that make products stand out over others. We looked at <b>chatbots and in-home devices</b>, such as Alexa and Siri.</p>
               </div>
@@ -259,14 +262,14 @@
             </div>
             <div class="col-md-12">
               <br></br>
-              <p id="rowoverview2">04 Reflection</p>
+              <p id="rowoverview2">05 Reflection</p>
               <p class="description1">This project was interesting because I worked with two masters students coming from <b>very different backgrounds.</b> It was rewarding to learn how they think and sort of meet them in the middle. Additionally, this project really kickstarted my interested in Conversation Design. I'm currently learning about Voiceflow, Dialogflow, and about voice agents in general for my Master's capstone. Although at the time, some of the content went over my head, I learned a lot about <b>modeling scenarios and backing up my ideas with market research.</b></p>
             </div>
             <div class="col-md-12">
               <hr id="pushdown">
             </div>
             <div class="col-md-12">
-              <p id="rowoverview2">05 Links</p>
+              <p id="rowoverview2">06 Links</p>
               <p class="description1"><a href="https://docs.google.com/document/d/e/2PACX-1vTkune-RfnEO6HoFJkV7nNUKiunVeAIkpbsJU4A1hXyQKlMB02mTn5rD9EjoNj2ynZdXb7UFMRestem/pub"><font color="#DAA520">Model Text</font></a></p>
               <p class="description1"><a href="https://docs.google.com/document/d/e/2PACX-1vT9enJiNyGUzk9ygV7GGg_iNtplsKezgYgLEw3mnpftPADvxlyk2fsjxaGfJZZ1zFryfzgo-xMoqJRX/pub"><font color="#DAA520">CUI Features</font></a></p>
             </div>
