--- a/nasanew.html
+++ b/nasanew.html
@@ -78,8 +78,11 @@
                 <span class=caption>Role</span>
                 <p class="description1">App/System Design + UI Design</p>
               </div>
-              <br></br>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
               <div class="col-md-8">
+                <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">Create <b>hotkeys and shortcuts</b> for the most implemented actions in the Playbook, <b>evaluate and redesign the system structure</b> of the Playbook iPad application.</p>
               </div>
@@ -99,7 +102,7 @@
           <!-- <img src="images/CJ/breakline.jpg" id="break" width=1268> -->
             <div class="row mb-5">
               <div class="col-md-12">
-                <p id="rowoverview2">02 Solution</p>
+                <p id="rowoverview2">03 Solution</p>
                 <p class="description1">My final concept consisted of both <b>UI changes but also cleaning up the overall system design.</b><br>The proposed user flow <b>cuts the number of clicks by 44%</b>! Key changes:<br></br><font color=" #A9A9A9">01</font></b><b> repurposing the activity tray</b> to be a space where actions can<br>also occur to activities<br></br><b><font color=" #A9A9A9">02</font></b><b> cutting the preferences</b> (ex: having an entry rather than click<br>through a long list of numbers).<br></p>
                 <br>
                 <img src="images/NASA/nasavisual7.png" alt="Image placeholder" class="img-fluid" width="200%">
@@ -122,7 +125,7 @@
               <div class="col-md-12">
                 <hr id="pushdown">
                 <br>
-                <p id="rowoverview2">03 Approach</p>
+                <p id="rowoverview2">0 Approach</p>
                  <p id="subheader"><b>initial research</b></p>
                  <p class="description1">A <b>visual interpretation</b> of Playbook: an iPad application used to create <b>convenience</b> and <b>independence</b> in editing mission activities.</p>
                 <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/problemvisual2.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
@@ -179,11 +182,11 @@
               <div class="col-md-12">
                 <hr id="pushdown">
                 <br></br>
-                <p id="rowoverview2">04 Reflection</p>
+                <p id="rowoverview2">05 Reflection</p>
                 <p class="description1"> This past summer, I had the incredible opportunity to be a <b>UX Designer for the <a href="https://www.nasa.gov/centers/ames/orgs/exploration-tech/projects/spife.html"><font color="#DAA520">SPIFe team at the NASA AMES Research Center. </font></a></b>I absolutely loved working for the SPIFE team and enjoyed my time in Mountain View, California. The team had a work process similar to that of a startup embedded within a larger organization. Over the summer, I grew my <b>technical design knowledge</b> and was able to learn how to work with software developers in an <b>agile development environment.</b> Currently, my changes on Playbook are being implemented, so the future steps would be to ensure that everything is <b>deployed successfully for the next NEEMO mission.</b> This was my first UX internship and the first time I actually implemented my designs beyond the classroom, which was really exciting!</p>
                 <p class="text-center mb-4" id="uservisual"><img src="images/NASA/pics.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
                 <hr id="pushdown">
-                <p id="rowoverview2">05 Links</p>
+                <p id="rowoverview2">06 Links</p>
                 <p class="description1"><a href="images/NASA/final.pdf"><font color="#DAA520">Final Internship Deck</font></a></p>
                 <p class="description1"><a href="images/NASA/hunch.pdf"><font color="#DAA520">NASA HUNCH Poster</font></a></p>
               </div>
