--- a/newlemon.html
+++ b/newlemon.html
@@ -77,8 +77,11 @@
                 <span class=caption>Role</span>
                 <p class="description1">Branding + Pitch/Presentation Development + Logo/Mobile Design</p>
               </div>
-              <br></br>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
               <div class="col-md-8">
+                <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">Come up with an innovative digital service for any problem space.</p>
               </div>
@@ -97,7 +100,7 @@
             <!--section 2-->
              <div class="row mb-5">
               <div class="col-md-6">
-                <p id="rowoverview2">02 Solution</p>
+                <p id="rowoverview2">03 Solution</p>
                   <p id="subheader"><b>introducing lemon</b></p>
                   <p class="description1">
                     A mobile application that tackles personal waste with just one picture of your grocery receipt! Lemon has<b> three key features:</b><br></br><b>01</b> food tracking<br></br><b>02</b> repurposing ideas<br></br><b>03</b> smarter shopping</p>
@@ -134,7 +137,7 @@
               </div>
               <div class="col-md-6">
                 <br>
-                <p id="rowoverview2">03 Approach</p>
+                <p id="rowoverview2">04 Approach</p>
                 <p id="subheader"><b>initial research</b></p>
                 <p class="description1">Today, food waste is an important problem. It has a <b>major financial impact, impacts food security, and affects the climate and resource conservation.</b><br></br><br></br>Food that could be used to feed hungry families is instead sent to landfills, eventually adding up to <b>8% of global greenhouse gas emissions.</b></p>
               </div>
@@ -247,12 +250,12 @@
               <div class="col-md-12">
                 <hr id="pushdown">
                 <br>
-                <p id="rowoverview2">04 Reflection</p>
+                <p id="rowoverview2">05 Reflection</p>
                 <p class="description1">This project was rewarding for me because this was the first time I really got to <b>lead a team through the entirety of the project</b>, given that it was all my team members' first times taking an HCI class. I also <b>took charge of branding, logo, and visuals</b>, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my practice to the next level! In the future, I would want to flesh out <b>how we make money</b> and also do more <b>primary research/guerilla research</b> to validate market need.</p>
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
-                <p id="rowoverview2"> 05 Links</p>
+                <p id="rowoverview2"> 06 Links</p>
                 <p class="description1" id="link"><a href="images/lemon/lemonprocess.pdf"><font color="#DAA520">Lemon Process Book</font></a><br>
                 <a href="images/lemon/lemonpitch.pdf"><font color="#DAA520">Lemon Pitch Deck</font></a></p>
               </div>
