--- a/darpa2.html
+++ b/darpa2.html
@@ -77,6 +77,7 @@
               </div>
               <br></br>
               <div class="col-md-8">
+                <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">Design a base station interface to increase efficiency and reduce cognitive overload for the base station operator as they monitor multiple air and ground robots while conducting artifact detection.</p>
               </div>
@@ -95,7 +96,7 @@
             <!--section 2-->
              <div class="row mb-5">
               <div class="col-md-12">
-                <p id="rowoverview2">02 Solution</p>
+                <p id="rowoverview2">03 Solution</p>
                   <p id="subheader"><b></b></p>
                   <p id="subheader"><b>base station sample screens</b></p>
                   <img src="images/DARPA/flows.png" alt="Image placeholder" width="100%"><br></br>
