--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -80,6 +80,7 @@
               </div>
               <br></br>
               <div class="col-md-8">
+                <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">Using a mobile application, how can we solve a problem faced by a local Pittsburgh company?</p>
               </div>
@@ -99,7 +100,7 @@
           </div>
            <div class="row mb-5">
               <div class="col-md-12">
-                <p id="rowoverview2">02 Solution</p>
+                <p id="rowoverview2">03 Solution</p>
                   <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create a fun environment <b>for children to learn about sustainability and conservation.<br></br>Feel free to click around on our <a href="https://framer.cloud/ZIOOL/7"><font color="#DAA520">Framer</font></a> prototype!</b></p>
               </div>
               <div class="col-md-12">
@@ -116,7 +117,7 @@
                 <hr id="pushdown">
               </div>
               <div class="col-md-6">
-                <p id="rowoverview2">03 Approach</p>
+                <p id="rowoverview2">04 Approach</p>
                 <p id="subheader"><b>understanding the business model</b></p>
                 <p class="description1">We took a look at Construction Junction’s goals and business model, their mission and products, and how they are involved with the community, since they are a non-profit organization. Upon initial analysis, we found that many community members refer to Construction as <b>the "junkyard".</b></p>
               </div>
@@ -265,15 +266,15 @@
 
         </div>
       </div>-->
-      <div class="col-md-12">
-        <p id="rowoverview2">04 Reflection</p>
+      <!--<div class="col-md-12">
+        <p id="rowoverview2">05 Reflection</p>
         <p class="description1"> This project also had a personal impact on me - I learned a lot of high-fidelity tools, such as Framer. Additionally, this project was my first foray into visual design.</p>
+      </div>-->
+      <div class="col-md-12">
+        <hr id="pushdown">
       </div>
       <div class="col-md-12">
-        <hr
-      </div>
-      <div class="col-md-12">
-        <p id="rowoverview2">05 Links</p>
+        <p id="rowoverview2">06 Links</p>
         <p class="description1"><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7wlbv9IaxUNZ-i3OKbMsOxJHTWtfF7EMOH4Z4Yzo6AQnum5rtcwPndSz_ufVgEHODqH5Ebt5AZYAw/pub?start=false&loop=false&delayms=3000"><font color="#DAA520">Process Book</font></a></p>
       </div>
 
