--- a/tiles.html
+++ b/tiles.html
@@ -77,8 +77,11 @@
                 <span class=caption>Role</span>
                 <p class="description1">Product Design + Survey Design + Conducting and Analyzing Interviews/Surveys</p>
               </div>
-              <br></br>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
               <div class="col-md-8">
+                <p class="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
                 <p class="description1">Create an interactive tactile tile that can be used to <b>improve the 'last meter problem'</b> that is experienced by the <b>blind or visually impaired</b>. The hope is that the tactile tiles can be sold in a kit and used as a low-cost method for solving this problem.</p>
               </div>
@@ -98,7 +101,7 @@
           <!-- <img src="images/CJ/breakline.jpg" id="break" width=1268> -->
             <div class="row mb-5">
               <div class="col-md-12">
-                <p id="rowoverview2">02 Current Stage</p>
+                <p id="rowoverview2">03 Current Stage</p>
                 <p class="description1">Our approach to solving this problem is by using tactile surfaces or <b>textured ground surfaces that one can sense through touch or by walking on them</b>, perhaps in combination with some bluetooth/audio tool.</p>
                 <img src="images/tiles/funny.png" alt="Image placeholder" class="img-fluid" width="100%">
               </div>
@@ -115,7 +118,7 @@
              </div>
              <div class="col-md-12">
                 <br>
-                <p id="rowoverview2">03 Approach</p>
+                <p id="rowoverview2">04 Approach</p>
                  <p id="subheader"><b>problem space exploration</b></p>
                  <p class="description1">Going into this project, I had limited knowledge of visually impaired or blind users. I tried to learn about common navigation problems, tactile pavers, and current technology that exists for the visually impaired. The hope was to be able to come up with some guiding questions and takeaways.</p>
                 <p class="text-center mb-4" id="questions"><img src="images/tiles/keyquestions.png" alt="Image placeholder" class="img-fluid" width="60%"></p>
@@ -176,7 +179,7 @@
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p id="rowoverview2">04 Reflection</p>
+                <p id="rowoverview2">05 Reflection</p>
                 <br>
                 <p class="description1">The next step is to <b>integrate audio and pressure sensing.</b> Then, we hope to gather results of the Twitter survey and conduct in person interviews while continuing to build out the technology. The final product would be some sort of <b>toolkit that we could hand-off so people can make interactive tiles within the buildings or outdoor spaces that they need them in.</b> <br></br>My experience with the accessibility team has been extremely rewarding. I learned about so <b>many prototyping tools and technologies</b> in such a short period of time.</p>
               </div>
@@ -185,7 +188,7 @@
               </div>
               <div class="col-md-6">
                 <br>
-                <p id="rowoverview2">05 Links</p>
+                <p id="rowoverview2">06 Links</p>
                 <p class="description1" id="link"><a href="images/tiles/lastmeter.pdf"><font color="#DAA520">Last Meter Workshop Paper</font></a></p>
               </div>
             </div>
