--- a/tiles.html
+++ b/tiles.html
@@ -77,6 +77,9 @@
                 <span class=caption>Role</span>
                 <p class="description1">Product Design + Survey Design + Conducting and Analyzing Interviews/Surveys</p>
               </div>
+              <div class="col-md-12">
+                <hr>
+              </div>
               <div class="col-md-8">
                 <p class="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
