--- a/darpa2.html
+++ b/darpa2.html
@@ -75,6 +75,9 @@
                 <span class=caption>Role</span>
                 <p class="description1">Dynamic Prototyping + Affinity Diagramming/Ideation + Field Research</p>
               </div>
+              <div class="col-md-12">
+                <hr>
+              </div>
               <div class="col-md-8">
                 <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
