--- a/miranda2.html
+++ b/miranda2.html
@@ -77,6 +77,9 @@
                 <span class=caption>Role</span>
                 <p class="description1">CUI Design and Modeling, Script Development</p>
               </div>
+              <div class="col-md-12">
+                <hr>
+              </div>
               <div class="col-md-8">
                 <p class="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
