--- a/nasanew.html
+++ b/nasanew.html
@@ -78,6 +78,9 @@
                 <span class=caption>Role</span>
                 <p class="description1">App/System Design + UI Design</p>
               </div>
+              <div class="col-md-12">
+                <hr>
+              </div>
               <div class="col-md-8">
                 <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
