--- a/newlemon.html
+++ b/newlemon.html
@@ -77,6 +77,9 @@
                 <span class=caption>Role</span>
                 <p class="description1">Branding + Pitch/Presentation Development + Logo/Mobile Design</p>
               </div>
+              <div class="col-md-12">
+                <hr>
+              </div>
               <div class="col-md-8">
                 <p id="rowoverview2">02 Challenge</p>
                 <span class=caption id="rowoverview">Project Ask</span>
