--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <a href="cj.html">
                                     <img src="images/smallphotocj.png" alt="">
                                     <div class="portfolio-text-holder">
-                                        <img src="images/smallshapeCJ.png">
+                                        <img src="images/smallshapecj.png">
                                     </div>
                                 </a>
                             </div>
