--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
               <div class="blog-metas" id="sectiontiles">
                 <div class="blog-meta"><p id="maintext">Physical Prototyping + Survey Design</p></div>
                 <div class="blog-meta"><p id="maintext">Context: Accessibility Research</p></div>
-                <div class="blog-meta"><a href="https://medium.com/@SimranJobanputra/tactile-tiles-bd68b4a63f3a"><font color="#DAA520"><p id="maintext">View Medium Article</font></p></a></div>
+                <div class="blog-meta"><p id="maintext"><a href="https://medium.com/@SimranJobanputra/tactile-tiles-bd68b4a63f3a"><font color="#DAA520">View Medium Article</font></a></p></div>
               </div>
             </div>
             <div class="col-md-10">
@@ -116,8 +116,8 @@
               <div class="blog-metas" id="sectiondarpa">
                 <div class="blog-meta"><p id="maintext">Robotics Design Research</p></div>
                 <div class="blog-meta"><p id="maintext">Context: Undergraduate Capstone Project</p></div>
-                <div class="blog-meta"><a href="images/research/subt.pdf"><font color="#DAA520"><p id="maintext">View Final Deck</p></font></a></div>
-                <div class="blog-meta"><a href="https://drive.google.com/file/d/17YiRsX2evONosw89kiaU-2pDGvUFi0Y_/view?usp=sharing"><font color="#DAA520"><p id="maintext">View Final Report</p></font></a></div>
+                <div class="blog-meta"><p id="maintext"><a href="images/research/subt.pdf"><font color="#DAA520">View Final Deck</font></a></p></div>
+                <div class="blog-meta"><p id="maintext"><a href="https://drive.google.com/file/d/17YiRsX2evONosw89kiaU-2pDGvUFi0Y_/view?usp=sharing"><font color="#DAA520">View Final Report</font></a></p></div>
               </div>
             </div>
             <div class="col-md-10">
