--- a/blog.html
+++ b/blog.html
@@ -1,185 +1,174 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>play</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Nissa Photography studio html template">
-	<meta name="keywords" content="industry, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>play</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Nissa Photography studio html template">
+  <meta name="keywords" content="industry, html">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Favicon -->
-	<link href="img/smallicon.png" rel="shortcut icon"/>
+  <!-- Favicon -->
+  <link href="images/sun.png" rel="shortcut icon"/>
 
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700' rel='stylesheet' type='text/css'>
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700' rel='stylesheet' type='text/css'>
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<script src="https://use.fontawesome.com/8dc2a4dcd5.js"></script>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="css/magnific-popup.css"/>
+  <link rel="stylesheet" href="css/owl.carousel.min.css"/>
+  <script src="https://use.fontawesome.com/8dc2a4dcd5.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+  <!-- Main Stylesheets -->
+  <link rel="stylesheet" href="css/style.css"/>
 
 
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
 </head>
-<body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
+  <body>
+  <body class="page">
+            <!-- <div id="content" class="site-content"> -->
+                <!-- <article> -->
+                    <header class="header-section">
+                        <a href="index.html"><img src="images/logo.png" alt="" class="logo" ></a>
 
-	<!-- Main section start -->
-	<div class="main-site-warp">
-		<div class="site-menu-warp">
-			<div class="close-menu">x</div>
-			<!-- Main menu -->
-			<ul class="site-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Me</a></li>
-				<li><a href="blog.html" class="active">Blog</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-				<li><a href="elements.html">Elements</a></li>
-			</ul>
-			<div class="menu-social">
-				<a href=""><i class="fa fa-pinterest"></i></a>
-				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-twitter"></i></a>
-				<a href=""><i class="fa fa-dribbble"></i></a>
-				<a href=""><i class="fa fa-behance"></i></a>
-			</div>
-		</div>
-		<header class="header-section">
-			<a href="index.html"><img src="img/logo.png" alt="" width="18%" ></a>
-			<!-- <div class="nav-switch">
-				<i class="fa fa-bars"></i>
-			</div> -->
-			<div class="header-social">
-				<a href="index.html"><h8 style="font-family:lato;">work</h8>
-				<a href="blog.html"><h8 style="font-family:lato;">play</h8>
-				<a href="research.html"><h8 style="font-family:lato;">research</h8>
-				<a href="about.html"><h8 style="font-family:lato;">about</h8></a>
-				<a href="img/resume.pdf"><h8 style="font-family:lato;">resume</h8></a>
-			</div>
-		</header>
-		<!-- <div class="site-content-warp"> -->
-			<!-- Left Side section -->
-			<<!-- div class="main-sidebar">
-				<div class="mb-warp">
-					<a href="index.html" class="site-logo">
-						<h2>Nissa</h2>
-						<p>Photography Studio</p>
-					</a>
-					<div class="about-info">
-						<h2>My name is Michael Smith.</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus libero mauris, bibendum eget sapien ac, ultrices rhoncus ipsum. Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu vehicula fringilla ut vitae orci. Suspendisse maximus malesuada  </p>
-					</div>
-					<ul class="contact-info">
-						<li>1525  Boring Lane, Los Angeles, CA</li>
-						<li>+34 56672 9984 22</li>
-						<li><a href="mailto:contactme@myemail.com">contactme@myemail.com</a></li>
-					</ul>
-					<a href="#" class="site-btn">see my portfolio <img src="img/arrow-right.png" alt=""></a>
-				</div>
-			</div> -->
-			<!-- Left Side section end -->
-			<!-- Page start -->
-			<div class="page-section blog-page">
-				<br><br>
-				<div class="blog-posts">
-					<div class="blog-post-item">
-						<br>
-						<div id="detail-img">
-							<img src="img/avo3.png">
-						</div>
-						</div>
-						<div class="blog-content" id="totop">
-							<h2>crafting an afternoon snack</h2>
-							<div class="blog-metas">
-								<div class="blog-meta">Product Design</div>
-								<div class="blog-meta">Context: Colors Studio</div>
-								<div class="blog-meta"><a href="https://medium.com/@SimranJobanputra/colors-process-documentation-51974e47868c"><font color="#DAA520">View Medium Article</font></a></div>
-							</div>
-							<p>I sat in on a colors studio this past semester and learned a lot about color theory and how it <b>changes the perception of a product, sketch, or space.</b> For one of the projects, we were tasked with designing an afternoon snack, specifically surrounding a fruit or vegetable. We started with <b>exploring packaging design</b> and color palettes (through fingerpainting among other forms) and eventually took the package to conception with a <b>photoshoot of how it would be used in its environment.</b> I owe my growth as a <b>visual designer</b> and my comfort with <b>nitty gritty details in photoshop/illustrator</b> to this class - feel free to take a look at what I learned in this course along with some photos of my final product in my Medium article! </p>
-						</div>
-					</div>
-					<div class="blog-post-item">
-						<br>
-						<div class="blog-thumb set-bg" data-setbg="img/tiles.png"></div>
-						<div class="blog-content">
-							<h2>tactile tiles</h2>
-							<div class="blog-metas">
-								<div class="blog-meta">Physical Prototyping + Survey Design</div>
-								<div class="blog-meta">Context: Accessibility Research</div>
-								<div class="blog-meta"><a href="https://medium.com/@SimranJobanputra/tactile-tiles-bd68b4a63f3a"><font color="#DAA520">View Medium Article</font></a></div>
-							</div>
-							<p><b>Independent mobility remains a challenge experienced by people who are blind</b> or visually impaired - a person may reach a general area but may encounter difficulty or lack the information to get to a very specific destination. Currently available navigation techniques are <b>not capable of robust navigation and spatial tasks</b> in the 2-3 meter range. In this research project, where I worked with the <b>Accessibility Lab @ Carnegie Mellon,</b> my team was tasked with creating an <b>interactive tactile tile</b> that could be used to improve this problem through <b>pressure sensing.</b> The hope is that these tactile tiles can be sold in a kit and be used as a low-cost implementation in any environment. I learned a lot about physical prototyping, such as <b>vacuum forming, 3D printing, and arduino</b>, along with how to create <b>survey designs for accessible populations.</b>
-							</p>
-						</div>
-					</div>
-					<div class="blog-post-item">
-						<br>
-						<div class="blog-thumb set-bg" data-setbg="img/barre.png"></div>
-						<div class="blog-content">
-							<h2>meet me at the barre</h2>
-							<div class="blog-metas">
-								<div class="blog-meta">Content Creation & Book Design/Binding</div>
-								<div class="blog-meta">Context: Design Thinking</div>
-								<!-- <div class="blog-meta"><a href="https://medium.com/p/9e4b8a1f5b33/edit"><font color="#DAA520"> View Medium Article</font></a></div> -->
-								<div class="blog-meta"><a href="img/dancedes.pdf"><font color="#DAA520"> View Pdf Book</font></a></div>
-							</div>
-							<p></p>
-						</div>
-					</div>
-					<div class="blog-post-item">
-						<br>
-						<div class="blog-thumb set-bg" data-setbg="img/digitool.png"></div>
-						<div class="blog-content">
-							<h2>2-in-1 laptop meal tray</h2>
-							<div class="blog-metas">
-								<div class="blog-meta">Fabrication</div>
-								<div class="blog-meta">Context: Solving a Personal Problem!</div>
-								<div class="blog-meta"><a href="img/digitool.pdf"><font color="#DAA520">View Final Presentation</font></a></div>
-							</div>
-							<p></p>
+                        <div class="header-social">
+                            <!-- <a href="index.html"><font color="#DAA520"><h4 style="font-family:lato;" id="push">simran jobanputra</h4></font></a>  -->
+                            <!-- <a href="index.html"><h3 style="font-family:lato;" class="logo"><font color="#DAA520">simran jobanputra</font></h3> -->
+                            <a href="index.html"><h8 style="font-family:lato;">work</h8>
+                            <a href="blog.html"><h8 style="font-family:lato;" >play</h8>
+                            <a href="research.html"><h8 style="font-family:lato;">research</h8>
+                            <a href="about.html"><h8 style="font-family:lato;" >about</h8></a>
+                            <a href="img/resume.pdf"><h8 style="font-family:lato;">resume</h8></a>
+                        </div>
+                    </header>
+     <!-- <ul id="menu">
+            <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
+            <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
+            <li style="list-style-type:none"><a href="#"><font color="#000000">Solution</a></font></li>
+            <li style="list-style-type:none"><a href="#FAQ"><font color="#000000">Approach</a></font></li>
+            <li style="list-style-type:none"><a href="#FAQ"><font color="#000000">Metrics</a></font></li>
+            <li style="list-style-type:none"><a href="#FAQ"><font color="#000000">Reflection</a></font></li>
+            <li style="list-style-type:none"><a href="#FAQ"><font color="#000000">Links</a></font></li>
+      </ul> -->
 
-                            <a href="blog.html">play</a></p>
-                            <a href="index.html"></a>
-                            <br><br>
-                            <p>Copyright Simran Jobanputra © 2020 All rights reserved</p>
-						</div>
+        <div class="row">
+          <div class="col-md-12">
+          <div class="container">
 
-					</div>
-
-				</div>
-			<!-- </div> -->
-			<!-- Page end -->
-		<!-- </div>
-	</div> -->
-<!-- 	<div class="copyright"><p><Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  <!-- Copyright  Simran Jobanputra &copy; <script>document.write(new Date().getFullYear()); </script> All rights reserved -->
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><!-- </p></div> -->
-	<!-- Main section end -->
+          <!-- <div class="col-md-10" data-aos="fade-up">
+            <br>
+            <h1 style="font-family:lato;" id="header">Junction Journey</h1>
+            <h4 style="font-family:lato;" id="keyproblems">a gamified mobile application that creates a fun environment for children to learn about sustainability and conservation.</h4>
+            <a href="#next" class="go-down js-smoothscroll"></a>
+          </div>
+        </div>
+      </div> -->
+    <section class="templateux-portfolio-overlap mb-3" id="next">
+      <div class="container2" data-aos="fade-up">
+        <div class="row justify-content-center">
+           <div class="col-md-12" id="cover-img">
+              <br><br><br><br><br><br>
+              <h1 id="header">play</h1><br>
+              <font color="#A9A9A9"><h4 id="keyproblems">I'm constantly trying to work on my</font> visual design <font color="#A9A9A9">and</font> fabrication skills. <font color="#A9A9A9">Here are some of the things I've done for fun!</font></h4></font><br><br>
+              <img src="img/snack.jpg" alt="Image placeholder">
+           </div>
+           <div class="col-md-12">
+              <h2 style="font-family:lato;" id="subheadercolors">crafting an afternoon snack</h2>
+              <div class="blog-metas" id="sectioncolors">
+                <div class="blog-meta"><p id="maintext">Product Design</p></div>
+                <div class="blog-meta"><p id="maintext">Context: Colors Studio</p></div>
+                <div class="blog-meta"><font color="#DAA520"><a href="https://medium.com/@SimranJobanputra/colors-process-documentation-51974e47868c"><p id="maintext">View Medium Article</p></a></font></div>
+              </div>
+            </div>
+            <div class="col-md-10">
+              <p id="maintext" style="font-family:lato;"> For this project, I designed an afternoon snack, specifically surrounding a fruit or vegetable. We started with exploring packaging design and color palettes (through fingerpainting among other forms) and eventually took the package to conception with a photoshoot of how it would be used in its environment. I owe my growth as a visual designer and my comfort with nitty gritty details in photoshop/illustrator to this class I sat in on- feel free to take a look at what I learned in this course along with some photos of my final product in my Medium article!</p>
+            </div>
+           <div class="col-md-12" id="harp-img">
+              <br><br><br>
+              <img src="img/book.jpg" alt="Image placeholder">
+           </div>
+            <div class="col-md-12">
+              <h2 style="font-family:lato;" id="subheaderharp">meet me at the barre</h2>
+              <div class="blog-metas" id="sectionbook">
+                <div class="blog-meta"><p id="maintext">Content Creation and Book Design/Binding</p></div>
+                <div class="blog-meta"><p id="maintext">Context: Design Thinking</p></div>
+                <div class="blog-meta"><p id="maintext"><a href="img/dancedes.pdf"><font color="#DAA520"> View Pdf Book</font></a></p></div>
+              </div>
+            </div>
+            <div class="col-md-10">
+              <p id="maintext" style="font-family:lato;">The way I design is heavily influenced by my background as a dancer. This book creates a metaphor between being a dancer and being a dancer - showing what I learned through my years of practice and how I apply it to design thinking! I designed the concept, bound the book, and also created a virtual experience to go along with the book - where I teach people how to do the "empathy dance". More information coming soon!</p>
+            </div>
+            <div class="col-md-12" id="harp-img">
+              <br><br><br>
+              <img src="img/digitool.jpg" alt="Image placeholder">
+           </div>
+            <div class="col-md-12">
+              <h2 style="font-family:lato;" id="subheaderdarpa">2-in-1 laptop meal tray</h2>
+              <div class="blog-metas" id="sectiondigi">
+                <div class="blog-meta"><p id="maintext">Fabrication</p></div>
+                <div class="blog-meta"><p id="maintext">Context: Solving a Personal Problem!</p></div>
+                <div class="blog-meta"><p id="maintext"><a href="img/digitool.pdf"><font color="#DAA520">View Final Presentation</font></a></p></div>
+              </div>
+            </div>
+            <div class="col-md-10">
+              <p id="maintext" style="font-family:lato;">I often use a laptop desk to study when I want a change of place/don't want to use my study table. However, I am often trying to multitask - eating and finishing homework. I created this desk to be able to accomplish both together, inspired by airplane trays and high-tech laptop desks. I designed and fabricated the entire piece myself.</p>
+            </div>
+           </div>
+          </div>
+        </div>
+      </div>
+   <!--  <section class="templateux-portfolio-overlap mb-5" id="next">
+      <div class="container" data-aos="fade-up" font->
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <br>
+            <div class="row work-detail">
+              <div class="col-md-4">
+                <p style="font-family:lato;" id="projectinfo"><b>Physical Prototyping + Survey Design</b></p>
+              </div>
+              <div class="col-md-4">
+                <p style="font-family:lato;" id="projectinfo"><b>Context: Accessibility Research</b></p>
+              </div>
+              <div class="col-md-4">
+                <strong style="font-family:lato;font-size:1.4vw;">Time</strong><br>
+                <span class=caption style="font-family:lato;font-size:1.3vw;">8 Weeks, Fall 2019</span>
+                <p style="font-family:lato;" id="projectinfo"><b><a href="https://medium.com/@SimranJobanputra/tactile-tiles-bd68b4a63f3a"><font color="#DAA520">View Medium Article</font></a></b></p>
+              </div>
 
 
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/main.js"></script>
-	</body>
+
+
+
+
+             <strong style="font-family:lato;">Tools</strong><br>
+                <span class=caption style="font-family:lato;font-size:1.3vw;">Sketch, Photoshop, Figma, InDesign, iMovie</span> -->
+
+
+       <!--  </div> -->
+        </div>
+
+            <footer class="footer">
+                <div class="content-1330 center-relative">
+                    <ul>
+                        <ul class="left-footer-content">
+                          <br><br>
+                           <h10 id="maintext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright Simran Jobanputra&nbsp;©&nbsp;2020&nbsp;&nbsp;All&nbsp;rights&nbsp;reserved</h10>
+                        </ul>
+                    </ul>
+                </div>
+            </footer>
+            <!-- End .body-border -->
+        </div>
+  <script src="js/scripts-all.js"></script>
+  <script src="js/main.js"></script>
+  </body>
 </html>
