new cover photo

--- a/cj.html
+++ b/cj.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div id="detail-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
-            <img src="images/nasa/playbookcover.jpg" alt="Image placeholder" >
+            <img src="images/cj/cjcover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
       </div>
@@ -74,7 +74,7 @@
           <div class="col-md-10" data-aos="fade-up">
             <br>
             <h1 style="font-family:lato;" id="header">Junction Journey</h1>
-            <h4 style="font-family:lato;" id="keyproblems">a gamified mobile application that creates a fun environment for children to learn about sustainability and conservation.</h4>
+            <h4 style="font-family:lato;" id="keyproblems">A gamified mobile application that creates a fun environment for children to learn about sustainability and conservation.</h4>
             <a href="#next" class="go-down js-smoothscroll"></a>
           </div>
         </div>
