miranda is updated with menubar/new above the fold content

--- a/miranda.html
+++ b/miranda.html
@@ -52,14 +52,23 @@
                     </header>
 
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+      <!-- <div class="container"> -->
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
-            <img src="images/miranda/mirandacover.jpg" alt="Image placeholder" >
+            <img src="images/miranda/mirandacover2.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+    <!--   </div> -->
     </section>
+    <div class="sidenav">
+      <a href="#overviewtag">overview</a>
+      <a href="#challengetag">challenge</a>
+      <a href="#solutiontag">solution</a>
+      <a href="#approachtag">approach</a>
+      <a href="#metricstag">metrics</a>
+      <a href="#reflectiontag">reflection</a>
+      <a href="#linkstag">links</a>
+    </div>
      <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
@@ -83,7 +92,7 @@
       <div class="container" data-aos="fade-up" font->
         <div class="row justify-content-center">
           <div class="col-md-10">
-            <br>
+            <br><br>
             <div class="row work-detail">
               <div class="col-md-2">
                 <p style="font-family:lato;" id="projectinfo"><b>Role</b><br>Conversation Designer, Researcher</p>
@@ -103,7 +112,7 @@
               </div>
           </div>
            <div class="row">
-              <div class="col-md-10" >
+              <div class="col-md-10" id="overviewtag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="overviewtag">OVERVIEW</a></font></strong></h2>
                 <br>
@@ -119,16 +128,16 @@
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">impact</font></h4>
                 <p id="maintext">This product was not shipped or market tested, but it made me very <b>interested in Conversational Design.</b> I'm currently learning new technologies like Voiceflow and Dialogflow for my Master's Capstone project!</p>
               </div>
-               <div class="col-md-5" ><a id="overviewtag"></a>
+               <div class="col-md-5" ><a id="challengetag"></a>
                   <br><br>
-                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="challengetag">CHALLENGE</a></font></strong></h2><br>
+                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">CHALLENGE</font></strong></h2><br>
                    <h4 id="keyfindings"><font color="#20B2AA">Encourage in-store shopping.</font></h4><br>
                 </div>
                 <div class="col-md-5"></div>
                 <div class="col-md-10" id="detail-img">
                   <p id="maintext">The convenience of online shopping has stagnated the number of in-store shoppers. <b>Ecommerce is growing 3x faster</b> than any other retail sector and <b>52%</b> of consumers prefer online shopping. We wanted to better understand how we can <b>encourage shoppers to visit stores</b> and challenge our assumptions that in-store shopping is dead.</p>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-5" id="solutiontag">
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">SOLUTION</font></strong></a></h2><br>
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">concept video</font></h4><br>
                 <p id="maintext">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping</b> by building an experience that elevates department stores.</b><br></br><b><font color="#20B2AA">01</font></b> personalizing the shopping experience <br><br><b><font color="#20B2AA">02</font></b> making inventory management + customer service easier</p></p>
@@ -154,7 +163,7 @@
                   <br><br>
                   <img src="images/miranda/model.jpg" alt="Image placeholder">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="approachtag">
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">APPROACH</font></strong></a></h2>
               </div>
               <div class="col-md-4">
@@ -263,7 +272,7 @@
                 <p id="maintext">Video Scripting + Filming</p>
                 <img src="images/miranda/video.jpg"  alt="Image placeholder">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="metricstag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">METRICS</font></strong></a></h2><br>
                 <p id="maintext">This product is not going to be implemented. However, I looked at the success of <b>similar conversational user interfaces</b> to determine important metrics for a retail CUI:<br><br>
@@ -273,7 +282,7 @@
                 <font color="#20B2AA">04</font> Customer satisfcation surveys/increased engagement in stores - with floor associates<br>
                 </p>
               </div>
-               <div class="col-md-12">
+               <div class="col-md-12" id="reflectiontag">
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">REFLECTION</font></strong></a></h2><br><br>
                 <font color="#20B2AA"><b>01 Building Dynamic Paths</b></font><br>
                 <p id="maintext">In the context of retail, there are a lot of different questions that can be asked: from getting your size in a pair of pants, to getting helping finding a particular section in a store, to converting your order to an online one. Due to this, it was important to consider all the different turns one could take. </p>
@@ -282,7 +291,7 @@
                 <font color="#20B2AA"><b>03 Growing an Increasing Interest in Conversational Design</b></font><br>
                 <p id="maintext">The biggest takeaway from this project for me was becoming interested in non-traditional interaction design. I really liked thinking about how to design for something that may not necessarily have a screen. I also enjoyed all the logic associations in conversation design - it allowed me to really express my technical side.</p>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="linkstag">
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">LINKS</font></strong></a></h2><br>
                 <p id="maintext"><a href="https://docs.google.com/document/d/13nrUQIEz1s__kusB6twQQSYjNw10N16FL4mNFo8jXcA/edit?usp=sharing">Model Text</a></p>
                 <p id="maintext"><a href="https://docs.google.com/document/d/e/2PACX-1vT9enJiNyGUzk9ygV7GGg_iNtplsKezgYgLEw3mnpftPADvxlyk2fsjxaGfJZZ1zFryfzgo-xMoqJRX/pub">CUI Features</a></p>
