menu and fold changes to lemon

--- a/lemon.html
+++ b/lemon.html
@@ -83,14 +83,23 @@
 
     <!-- END templateux-navbar -->
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+   <!--    <div class="container"> -->
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/lemonnew/lemoncover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+  <!--     </div> -->
     </section>
+     <div class="sidenav">
+      <a href="#overviewtag">overview</a>
+      <a href="#challengetag">challenge</a>
+      <a href="#solutiontag">solution</a>
+      <a href="#approachtag">approach</a>
+      <a href="#metricstag">metrics</a>
+      <a href="#reflectiontag">reflection</a>
+      <a href="#linkstag">links</a>
+    </div>
       <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
@@ -129,7 +138,7 @@
       <div class="container" data-aos="fade-up" font->
         <div class="row justify-content-center">
           <div class="col-md-10">
-            <br>
+            <br><br>
             <div class="row work-detail">
               <div class="col-md-3">
                 <p style="font-family:lato;" id="projectinfo"><b>Role</b><br>Product Designer/Project Lead</p>
@@ -149,9 +158,9 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-10" >
+              <div class="col-md-10" id="overviewtag">
                 <br><br>
-                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="overviewtag">OVERVIEW</a></font></strong></h2>
+                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">OVERVIEW</font></strong></h2>
                 <br>
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">project ask</font></h4>
                 <p id="maintext"> Come up with an innovative digital service for any problem space.</p><br>
@@ -165,9 +174,9 @@
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">impact</font></h4>
                 <p id="maintext">This class culminated in an <b>investor pitch and valuation by local Pittsburgh leaders</b>. Our team placed <b>third</b> in the pitch competition!</p>
               </div>
-              <div class="col-md-5" ><a id="overviewtag"></a>
+              <div class="col-md-5" ><a id="challengetag"></a>
                 <br><br>
-                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="challengetag">CHALLENGE</a></font></strong></h2><br>
+                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">CHALLENGE</font></strong></h2><br>
                 <h4 id="keyfindings"><font color="#20B2AA">My team focused on food waste as our problem space.</font></h4><br>
                 <p id="maintext">It has <b>impacts food security</b>, and affects the <b>climate and resource conservation.</b> Food that could be used to feed hungry families eventually adds up to <b>8% of global greenhouse gas emissions.</b><br><br>
                 One of the initial inspirations for this project was an app called <b>Too Good to Go</b> - that helps restaurants sell <b>leftover meals for a cheaper price</b> at the end of the day.</p>
@@ -181,7 +190,7 @@
                 <br><br><br><br><br><br><br><br>
                 <img src="images/lemonnew/toogood.jpg" alt="Image placeholder">
               </div>
-              <div class="col-md-10">
+              <div class="col-md-10" id="solutiontag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">SOLUTION</font></strong></a></h2>
               </div>
@@ -224,7 +233,7 @@
                 <img src="images/lemonnew/companalysis.png" id="businessanalysis2" alt="Image placeholder">
               </div> -->
               <div class="col-md-5"></div>
-              <div class="col-md-10">
+              <div class="col-md-10" id="approachtag">
                 <br><br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">APPROACH</font></strong></a></h2>
                 <br>
@@ -316,7 +325,7 @@
               <p id="maintext">Our team placed <b>third at the demo day pitch</b> where we presented to leaders in the Pittsburgh community! We pitched our idea as a <b>freemium model with a paid premium product.</b>The investors <b>loved our branding</b> and how simple yet effective the idea was!</p>
               <img src="images/lemonnew/demoday.jpg" alt="Image placeholder">
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12" id="metricstag">
                 <br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">METRICS</font></strong></a></h2><br>
                 <p id="maintext">If this app were to be implemented and put on the market, I would use the following <b>measures of success:</b><br><br>
@@ -326,7 +335,7 @@
                   <font color="#20B2AA">04</font> Number of people joining based on referral from current members<br>
                   <font color="#20B2AA">05</font> Qualitative testimonials</p>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12" id="reflectiontag">
             <br>
             <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">REFLECTION</font></strong></a></h2><br>
             <p id="maintext">This project was rewarding for me because this was the first time I really got to <b>lead a team through the entirety of the project</b>, given that it was all my team members' first times taking an HCI class. I also <b>took charge of branding, logo, and visuals</b>, something I typically shy away from. Doing well at the demo was incredible for me and made me feel that I have really taken my design practice to the next level! Some improvements:<br><br>
@@ -335,7 +344,7 @@
             <font color="#20B2AA"><b>02 Provide market validation of a product</b></font><br>
             We were commended on our research and validation of the idea, however my team never went out and tested the app and its functionality. If given more time, we would definitely go out and do some usability testing.</p>
           </div>
-           <div class="col-md-12">
+           <div class="col-md-12" id="linkstag">
             <br><br><br>
             <h2 style="font-family:lato;" id="solution"><strong><font color="#A9A9A9">LINKS</font></strong></a></h2><br>
             <p id="maintext"><a href="images/lemonnew/lemonprocess.pdf">Lemon Process Book</a></p>
