quick change to snap

--- a/snap.html
+++ b/snap.html
@@ -52,14 +52,15 @@
                     </header>
 
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/snap/snapcover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+
     </section>
+
      <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
