nasa-menu bar and below the fold

--- a/nasa.html
+++ b/nasa.html
@@ -52,14 +52,23 @@
                     </header>
 
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+ <!--      <div class="container"> -->
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/nasa/playbookcover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+   <!--    </div> -->
     </section>
+    <div class="sidenav">
+      <a href="#overviewtag">overview</a>
+      <a href="#challengetag">challenge</a>
+      <a href="#solutiontag">solution</a>
+      <a href="#approachtag">approach</a>
+      <a href="#metricstag">metrics</a>
+      <a href="#reflectiontag">reflection</a>
+      <a href="#linkstag">links</a>
+    </div>
      <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
@@ -83,7 +92,7 @@
       <div class="container" data-aos="fade-up" font->
         <div class="row justify-content-center">
           <div class="col-md-10">
-            <br>
+            <br><br>
             <div class="row work-detail">
               <div class="col-md-2">
                 <p style="font-family:lato;" id="projectinfo"><b>Role</b><br>UX Designer</p>
@@ -103,9 +112,9 @@
               </div>
           </div>
           <div class="row">
-              <div class="col-md-10" >
+              <div class="col-md-10" id="overviewtag">
                 <br><br>
-                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="overviewtag">OVERVIEW</a></font></strong></h2>
+                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">OVERVIEW</font></strong></h2>
                 <br>
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">project ask</font></h4>
                 <p id="maintext">Evaluation and <b>redesign the system</b> structure of the Playbook iPad application, create <b>shortcuts + hotkeys.</b></p><br>
@@ -119,9 +128,9 @@
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">impact</font></h4>
                 <p id="maintext">The system design updates and UI changes I made will be <b>implemented</b> for the next <a href="https://www.nasa.gov/mission_pages/NEEMO/index.html"><font color="#DAA520">NASA NEEMO</font></a> analog mission in <b>Summer 2020.</b> The hope is the software can ultimately be used for the <font color="#DAA520">Mars 2020</font></a> mission!</p>
               </div>
-               <div class="col-md-5" ><a id="overviewtag"></a>
+               <div class="col-md-5" ><a id="challengetag"></a>
                   <br><br>
-                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="challengetag">CHALLENGE</a></font></strong></h2><br>
+                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">CHALLENGE</font></strong></h2><br>
                    <h4 id="keyfindings"><font color="#20B2AA">Make Playbook easier + more efficient for use by astronauts.</font></h4><br>
                 </div>
                 <div class="col-md-5"></div>
@@ -135,7 +144,7 @@
               </div>
               <div class="col-md-5"></div>
 
-              <div class="col-md-10">
+              <div class="col-md-10" id="solutiontag">
                  <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">SOLUTION</font></strong></a></h2>
               </div>
@@ -167,7 +176,7 @@
                   <p id="maintext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slice</p>
                   <iframe  src="https://www.youtube.com/embed/OVC3FqVcF7c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <div class="col-md-10">
+              <div class="col-md-10" id="approachtag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">APPROACH</font></strong></a></h2><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">initial research</font></h4>
@@ -212,7 +221,7 @@
                 <br><br>
                 <img src="images/nasa/slice.jpg">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="metricstag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">METRICS</font></strong></a></h2><br>
                 <p id="maintext">To <b>measure success</b> once deployed, there are a few <b>key numbers</b> we can take a look at:<br><br>
@@ -222,7 +231,7 @@
                   <font color="#20B2AA">04</font> Qualitative accounts of how communication has improved with mission control<br>
                   <font color="#20B2AA">05</font> Qualitative account of how reliance on mission control has changed for astronauts</p>
               </div>
-              <div class="col-md-12" id="detail-img">
+              <div class="col-md-12" id="reflectiontag">
                 <br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">REFLECTION</font></strong></a></h2><br>
                 <p id="maintext">This past summer, I had the incredible opportunity to be a <b>UX Designer</b> for the <a href="https://www.nasa.gov/centers/ames/orgs/exploration-tech/projects/spife.html"><font color="#DAA520"><b>SPIFe team</b></font></a> at the NASA AMES Research Center.</b>I really enjoyed learning about a domain that was completely new to me and also it was exciting to be able to implement my designs beyond the classroom. <b>Two Main Takeaways:</b><br><br>
@@ -230,9 +239,11 @@
                 During the summer, I worked with a team of software engineer interns that were directly implementing the designs I created. I think there was definitely a learning curve to creating <b>language in documentation that made sense to engineers</b>, but overall I learned how to translate my designs into something that could be used by non-designers or anyone with background for that matter. I also learned how to balance multiple projects during the summer - feel free to check out my Internship Deck for more.<br><br>
                 <font color="#20B2AA"><b>02 Backing up Design Decisions</b></font><br>
                 Since the system I was designing was meant for Astronauts, it was really hard for me to wrap my head around user needs and goals. I learned a lot about <b>alternative research methods and ways to extract user information when the target group is not available.</b> I also learned more about how analogous domains could be looked at. For example, I looked at the functions of a Bloomberg Terminal and employed my previous background knowledge from sales and trading to better understand the complex processes astronauts need to go through.</p><br>
+              </div>
+              <div class="col-md-12" id="detail-img">
                 <img src="images/nasa/pics.jpg" alt="Image placeholder" class="img-fluid">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="linkstag">
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">LINKS</font></strong></a></h2><br>
                 <p id="maintext"><a href="images/nasa/final.pdf">Final Internship Deck</a></p>
                 <p id="maintext"><a href="images/nasa/hunch.pdf">NASA HUNCH Research Poster</a></p>
